[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "alpaca-trade-api>=3.2.0",
    "joblib>=1.5.1",
    "newsapi>=0.1.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "praw>=7.8.1",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "ta>=0.11.0",
    "xgboost>=3.0.2",
    "yfinance>=0.2.58",
]
